# ml_lab4

./: Dockerfile.train  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
lab3/: config_grid.json
lab3/scripts/: create_bucket.py  download_from_s3.py  process_data.py  run_experiment.sh  train_model.py  upload_experiment_results.py  upload_to_s3.py
output/: 10_10_2_10_10_2_model_(10, 10, 2).pkl  10_10_2_10_5_2_model_(10, 5, 2).pkl  10_10_2_50_10_2_model_(50, 10, 2).pkl  10_10_2_50_5_2_model_(50, 5, 2).pkl  10_5_2_10_10_2_model_(10, 10, 2).pkl  10_5_2_10_5_2_model_(10, 5, 2).pkl  10_5_2_50_10_2_model_(50, 10, 2).pkl  10_5_2_50_5_2_model_(50, 5, 2).pkl  50_10_2_10_10_2_model_(10, 10, 2).pkl  50_10_2_10_5_2_model_(10, 5, 2).pkl  50_10_2_50_10_2_model_(50, 10, 2).pkl  50_10_2_50_5_2_model_(50, 5, 2).pkl  50_5_2_10_10_2_model_(10, 10, 2).pkl  50_5_2_10_5_2_model_(10, 5, 2).pkl  50_5_2_50_10_2_model_(50, 10, 2).pkl  50_5_2_50_5_2_model_(50, 5, 2).pkl
