[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = ["nikolai_yuminov"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = ">=3.10"
black = "^24.10.0"
flake8 = "^7.1.1"
ipython = "^8.29.0"
isort = "^5.13.2"
jupyterlab = "^4.3.0"
loguru = "^0.7.2"
matplotlib = "^3.9.2"
mkdocs = "^1.6.1"
notebook = "^7.2.2"
numpy = "^1.24.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
tqdm = "^4.66.6"
typer = "^0.12.5"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
boto3 = "^1.35.54"
mlflow = "^2.7.0"
pyarrow = "^12.0.0"
wandb = "^0.15.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true
